--- a/arch/arm/boot/dts/amlogic/mesonsm1_drm.dtsi
+++ b/arch/arm/boot/dts/amlogic/mesonsm1_drm.dtsi
@@ -92,9 +92,9 @@
 		status = "disabled";
 		compatible = "amlogic, meson-sm1-vpu";
 		memory-region = <&logo_reserved>;
-		reg = <0x0 0xff900000 0x0 0x40000>,
-			  <0x0 0xff63c000 0x0 0x2000>,
-			  <0x0 0xff638000 0x0 0x2000>;
+		reg = <0xff900000 0x40000>,
+			  <0xff63c000 0x2000>,
+			  <0xff638000 0x2000>;
 		reg-names = "base", "hhi", "dmc";
 		interrupts = <GIC_SPI 3 IRQ_TYPE_EDGE_RISING>,
 			<GIC_SPI 56 IRQ_TYPE_EDGE_RISING>;
@@ -244,6 +244,22 @@
 					in_links = <0 &scaler_osd1_block>,
 						<1 &osd_blend_block>;
 					num_out_links = <0x0>;
+				};
+				video1_block: block@13 {
+					id = /bits/ 8 <VIDEO1_BLOCK>;
+					index = /bits/ 8  <0>;
+					type = /bits/ 8  <7>;
+					block_name = "video1_block";
+					num_in_links = /bits/ 8  <0x0>;
+					num_out_links = /bits/ 8  <0x0>;
+				};
+				video2_block: block@14 {
+					id = /bits/ 8 <VIDEO2_BLOCK>;
+					index = /bits/ 8  <1>;
+					type = /bits/ 8  <7>;
+					block_name = "video2_block";
+					num_in_links = /bits/ 8  <0x0>;
+					num_out_links = /bits/ 8  <0x0>;
 				};
 			};
 		};
