--- a/arch/arm/boot/dts/amlogic/mesontm2_drm.dtsi
+++ b/arch/arm/boot/dts/amlogic/mesontm2_drm.dtsi
@@ -92,9 +92,9 @@
 		status = "disabled";
 		compatible = "amlogic, meson-tm2-vpu";
 		memory-region = <&logo_reserved>;
-		reg = <0x0 0xff900000 0x0 0x40000>,
-			  <0x0 0xff63c000 0x0 0x2000>,
-			  <0x0 0xff638000 0x0 0x2000>;
+		reg = <0xff900000 0x40000>,
+			  <0xff63c000 0x2000>,
+			  <0xff638000 0x2000>;
 		reg-names = "base", "hhi", "dmc";
 		interrupts = <GIC_SPI 3 IRQ_TYPE_EDGE_RISING>,
 			<GIC_SPI 56 IRQ_TYPE_EDGE_RISING>;
