--- a/arch/arm64/boot/dts/amlogic/mesontm2_revb.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesontm2_revb.dtsi
@@ -1429,9 +1429,10 @@
 		compatible = "amlogic, meson-mmc-tm2-b";
 		reg = <0x0 0xffe07000 0x0 0x800>;
 		interrupts = <0 191 1>;
-		pinctrl-names = "emmc_clk_cmd_pins", "emmc_all_pins";
+		pinctrl-names = "emmc_clk_cmd_pins", "emmc_all_pins", "sleep";
 		pinctrl-0 = <&emmc_clk_cmd_pins>;
 		pinctrl-1 = <&emmc_conf_pull_up &emmc_conf_pull_done>;
+		pinctrl-2 = <&emmc_pins_sleep>;
 		clocks = <&clkc CLKID_SD_EMMC_C>,
 			   <&clkc CLKID_SD_EMMC_C_P0_COMP>,
 			   <&clkc CLKID_FCLK_DIV2>,
@@ -2379,6 +2380,29 @@
 					"uart_ao_a_tx_w10";
 			function = "uart_ao_a_ee";
 			bias-pull-up;
+			input-enable;
+		};
+	};
+
+	emmc_pins_sleep:emmc_all_pins_sleep {
+		mux {
+			groups = "BOOT_0",
+					"BOOT_1",
+					"BOOT_2",
+					"BOOT_3",
+					"BOOT_4",
+					"BOOT_5",
+					"BOOT_6",
+					"BOOT_7";
+			function = "gpio_periphs";
+			input-enable;
+		};
+		mux1 {
+			groups = "BOOT_8",
+					"BOOT_9",
+					"BOOT_10",
+					"BOOT_11";
+			function = "gpio_periphs";
 			input-enable;
 		};
 	};
