--- a/arch/arm64/boot/dts/amlogic/tm2_t962x3_t312.dts
+++ b/arch/arm64/boot/dts/amlogic/tm2_t962x3_t312.dts
@@ -562,10 +562,12 @@
 		 *if support 4K2K-YUV422-10bit-wr:3840*2160*3*6 ~= 160M
 		 *if support 4K2K-YUV422-8BIT-WR:3840*2160*2*4 ~= 64M
 		 *if support 1080p-YUV422-8BIT-WR:1920*1080*2*4 ~= 16M
-		 *worst case:(4096*2160*4 + 2M(afbce issue)) *6buf = 214.5M
+		 *worst case:(4096*2160*3 + 2M(afbce issue)) *10buf = 273.5M
 		 *for double write 4k, need extra 25M for 960x540(1/4 down)
 		 */
-		cma_size = <240>;
+		cma_size = <300>;
+		/* max buffer number */
+		frame_buff_num = <10>;
 		interrupts = <0 83 1 /* vdin0 vsync */
 			      0 72 1>;/* vpu crash */
 		rdma-irq = <2>;
