ddr: fix bandwidth usage mismatch problem [1/1]
PD#SWPL-24696

Problem:
Some chip connected 16 bit ddr with 32bit phy. Which caused
bandwidth usage is not true;

Solution:
Reading DMC_DDR_CTRL to check if 16bit DDR is connected.

Verify:
x301

Signed-off-by: Tao Zeng <tao.zeng@amlogic.com>
Change-Id: I4c281351249f416930d682f1e5f7db422d2b754b

--- a/arch/arm/boot/dts/amlogic/mesontxl.dtsi
+++ b/arch/arm/boot/dts/amlogic/mesontxl.dtsi
@@ -1066,6 +1066,7 @@
 		status = "okay";
 		reg = <0xc8838000 0x100
 		       0xc8837000 0x100>;
+		sec_base = <0xda838400>;
 		interrupts = <0 52 1>;
 		interrupt-names = "ddr_bandwidth";
 	};
