--- a/arch/arm64/boot/dts/amlogic/mesontxlx.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesontxlx.dtsi
@@ -926,6 +926,7 @@
 		status = "okay";
 		reg = <0x0 0xff638000 0x0 0x100
 		       0x0 0xff637000 0x0 0x100>;
+		sec_base = <0xda838400>;
 		interrupts = <0 52 1>;
 		interrupt-names = "ddr_bandwidth";
 	};
