audio: TM2_revB I2S &TDM set pinmux drive-strength as 1 [1/1]
PD#SWPL-25374

Problem:
hw team test TM2 revB i2s & tdm interface timing
and suggest set pinmux drive-strength as 1

Solution:
set pinmux drive-strength as 1 on dts file

Verify:
TM2-RevB-ab311

Change-Id: Ib6742955107a3246df1cebbf92b60a4350421f02
Signed-off-by: jian.zhou <jian.zhou@amlogic.com>

--- a/arch/arm/boot/dts/amlogic/tm2_revb_t962e2_ab311_sbr.dts
+++ b/arch/arm/boot/dts/amlogic/tm2_revb_t962e2_ab311_sbr.dts
@@ -1598,6 +1598,7 @@
 		mux { /* GPIOH_4 */
 			groups = "mclk0_h";
 			function = "mclk0";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1610,6 +1611,7 @@
 				"tdma_dout2_h",
 				"tdma_dout3_h";
 			function = "tdma_out";
+			drive-strength = <1>;
 			bias-pull-down;
 		};
 	};
@@ -1619,6 +1621,7 @@
 			groups = "tdma_din0_h",
 			    "tdma_din1_h";
 			function = "tdma_in";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1628,6 +1631,7 @@
 				"tdmc_fs",
 				"tdmc_dout0";
 			function = "tdmc_out";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1635,6 +1639,7 @@
 		mux { /* GPIODV_10 */
 			groups = "tdmc_din1";
 			function = "tdmc_in";
+			drive-strength = <1>;
 		};
 	};
 
