--- a/arch/arm64/boot/dts/amlogic/tm2_revb_t962e2_ab311_gva_sbr.dts
+++ b/arch/arm64/boot/dts/amlogic/tm2_revb_t962e2_ab311_gva_sbr.dts
@@ -1624,6 +1624,7 @@
 		mux { /* GPIOH_4 */
 			groups = "mclk0_h";
 			function = "mclk0";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1636,6 +1637,7 @@
 				"tdma_dout2_h",
 				"tdma_dout3_h";
 			function = "tdma_out";
+			drive-strength = <1>;
 			bias-pull-down;
 		};
 	};
@@ -1645,6 +1647,7 @@
 			groups = "tdma_din0_h",
 			    "tdma_din1_h";
 			function = "tdma_in";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1654,6 +1657,7 @@
 				"tdmc_fs",
 				"tdmc_dout0";
 			function = "tdmc_out";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1661,6 +1665,7 @@
 		mux { /* GPIODV_10 */
 			groups = "tdmc_din1";
 			function = "tdmc_in";
+			drive-strength = <1>;
 		};
 	};
 
