--- a/arch/arm64/boot/dts/amlogic/tm2_revb_t962e2_ab311_sbr.dts
+++ b/arch/arm64/boot/dts/amlogic/tm2_revb_t962e2_ab311_sbr.dts
@@ -1594,6 +1594,7 @@
 		mux { /* GPIOH_4 */
 			groups = "mclk0_h";
 			function = "mclk0";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1606,6 +1607,7 @@
 				"tdma_dout2_h",
 				"tdma_dout3_h";
 			function = "tdma_out";
+			drive-strength = <1>;
 			bias-pull-down;
 		};
 	};
@@ -1615,6 +1617,7 @@
 			groups = "tdma_din0_h",
 			    "tdma_din1_h";
 			function = "tdma_in";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1624,6 +1627,7 @@
 				"tdmc_fs",
 				"tdmc_dout0";
 			function = "tdmc_out";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1631,6 +1635,7 @@
 		mux { /* GPIODV_10 */
 			groups = "tdmc_din1";
 			function = "tdmc_in";
+			drive-strength = <1>;
 		};
 	};
 
