--- a/arch/arm64/boot/dts/amlogic/tm2_revb_t962x3_t312.dts
+++ b/arch/arm64/boot/dts/amlogic/tm2_revb_t962x3_t312.dts
@@ -1593,6 +1593,7 @@
 		mux { /* GPIOH_4 */
 			groups = "mclk0_h";
 			function = "mclk0";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1602,6 +1603,7 @@
 				"tdma_fs_h",
 				"tdma_dout0_h";
 			function = "tdma_out";
+			drive-strength = <1>;
 			bias-pull-down;
 		};
 	};
@@ -1611,6 +1613,7 @@
 			groups = "tdma_din0_h",
 			    "tdma_din1_h";
 			function = "tdma_in";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1620,6 +1623,7 @@
 				"tdmc_fs",
 				"tdmc_dout0";
 			function = "tdmc_out";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1627,6 +1631,7 @@
 		mux { /* GPIODV_10 */
 			groups = "tdmc_din1";
 			function = "tdmc_in";
+			drive-strength = <1>;
 		};
 	};
 
