--- a/arch/arm/boot/dts/amlogic/tm2_revb_t962e2_ab311.dts
+++ b/arch/arm/boot/dts/amlogic/tm2_revb_t962e2_ab311.dts
@@ -1611,6 +1611,7 @@
 		mux { /* GPIOH_4 */
 			groups = "mclk0_h";
 			function = "mclk0";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1621,6 +1622,7 @@
 				"tdma_dout0_h",
 				"tdma_dout1_h";
 			function = "tdma_out";
+			drive-strength = <1>;
 			bias-pull-down;
 		};
 	};
@@ -1630,6 +1632,7 @@
 			groups = "tdma_din0_h",
 			    "tdma_din1_h";
 			function = "tdma_in";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1639,6 +1642,7 @@
 				"tdmc_fs",
 				"tdmc_dout0";
 			function = "tdmc_out";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1646,6 +1650,7 @@
 		mux { /* GPIODV_10 */
 			groups = "tdmc_din1";
 			function = "tdmc_in";
+			drive-strength = <1>;
 		};
 	};
 
