--- a/arch/arm/boot/dts/amlogic/tm2_revb_t962e2_ab311_buildroot.dts
+++ b/arch/arm/boot/dts/amlogic/tm2_revb_t962e2_ab311_buildroot.dts
@@ -1612,6 +1612,7 @@
 		mux { /* GPIOH_4 */
 			groups = "mclk0_h";
 			function = "mclk0";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1622,6 +1623,7 @@
 				"tdma_dout0_h",
 				"tdma_dout1_h";
 			function = "tdma_out";
+			drive-strength = <1>;
 			bias-pull-down;
 		};
 	};
@@ -1631,6 +1633,7 @@
 			groups = "tdma_din0_h",
 			    "tdma_din1_h";
 			function = "tdma_in";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1640,6 +1643,7 @@
 				"tdmc_fs",
 				"tdmc_dout0";
 			function = "tdmc_out";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1647,6 +1651,7 @@
 		mux { /* GPIODV_10 */
 			groups = "tdmc_din1";
 			function = "tdmc_in";
+			drive-strength = <1>;
 		};
 	};
 
