--- a/arch/arm/boot/dts/amlogic/tm2_revb_t962e2_ab311_gva_sbr.dts
+++ b/arch/arm/boot/dts/amlogic/tm2_revb_t962e2_ab311_gva_sbr.dts
@@ -1628,6 +1628,7 @@
 		mux { /* GPIOH_4 */
 			groups = "mclk0_h";
 			function = "mclk0";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1640,6 +1641,7 @@
 				"tdma_dout2_h",
 				"tdma_dout3_h";
 			function = "tdma_out";
+			drive-strength = <1>;
 			bias-pull-down;
 		};
 	};
@@ -1649,6 +1651,7 @@
 			groups = "tdma_din0_h",
 			    "tdma_din1_h";
 			function = "tdma_in";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1658,6 +1661,7 @@
 				"tdmc_fs",
 				"tdmc_dout0";
 			function = "tdmc_out";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1665,6 +1669,7 @@
 		mux { /* GPIODV_10 */
 			groups = "tdmc_din1";
 			function = "tdmc_in";
+			drive-strength = <1>;
 		};
 	};
 
