--- a/arch/arm/boot/dts/amlogic/tm2_revb_t962x3_ab301.dts
+++ b/arch/arm/boot/dts/amlogic/tm2_revb_t962x3_ab301.dts
@@ -1617,6 +1617,7 @@
 		mux { /* GPIOZ_0 */
 			groups = "mclk0_z";
 			function = "mclk0";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1626,6 +1627,7 @@
 				"tdma_fs_z",
 				"tdma_dout0_z";
 			function = "tdma_out";
+			drive-strength = <1>;
 			bias-pull-down;
 		};
 	};
@@ -1635,6 +1637,7 @@
 			groups = "tdma_din0_h",
 			    "tdma_din1_h";
 			function = "tdma_in";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1644,6 +1647,7 @@
 				"tdmc_fs",
 				"tdmc_dout0";
 			function = "tdmc_out";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1651,6 +1655,7 @@
 		mux { /* GPIODV_10 */
 			groups = "tdmc_din1";
 			function = "tdmc_in";
+			drive-strength = <1>;
 		};
 	};
 
