--- a/arch/arm/boot/dts/amlogic/tm2_revb_t962x3_t312.dts
+++ b/arch/arm/boot/dts/amlogic/tm2_revb_t962x3_t312.dts
@@ -1591,6 +1591,7 @@
 		mux { /* GPIOH_4 */
 			groups = "mclk0_h";
 			function = "mclk0";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1600,6 +1601,7 @@
 				"tdma_fs_h",
 				"tdma_dout0_h";
 			function = "tdma_out";
+			drive-strength = <1>;
 			bias-pull-down;
 		};
 	};
@@ -1609,6 +1611,7 @@
 			groups = "tdma_din0_h",
 			    "tdma_din1_h";
 			function = "tdma_in";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1618,6 +1621,7 @@
 				"tdmc_fs",
 				"tdmc_dout0";
 			function = "tdmc_out";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1625,6 +1629,7 @@
 		mux { /* GPIODV_10 */
 			groups = "tdmc_din1";
 			function = "tdmc_in";
+			drive-strength = <1>;
 		};
 	};
 
