--- a/arch/arm64/boot/dts/amlogic/tm2_revb_t962e2_ab319.dts
+++ b/arch/arm64/boot/dts/amlogic/tm2_revb_t962e2_ab319.dts
@@ -1549,6 +1549,7 @@
 		mux { /* GPIOH_4 */
 			groups = "mclk0_h";
 			function = "mclk0";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1559,6 +1560,7 @@
 				"tdma_dout0_h",
 				"tdma_dout1_h";
 			function = "tdma_out";
+			drive-strength = <1>;
 			bias-pull-down;
 		};
 	};
@@ -1568,6 +1570,7 @@
 			groups = "tdma_din0_h",
 			    "tdma_din1_h";
 			function = "tdma_in";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1577,6 +1580,7 @@
 				"tdmc_fs",
 				"tdmc_dout0";
 			function = "tdmc_out";
+			drive-strength = <1>;
 		};
 	};
 
@@ -1584,6 +1588,7 @@
 		mux { /* GPIODV_10 */
 			groups = "tdmc_din1";
 			function = "tdmc_in";
+			drive-strength = <1>;
 		};
 	};
 
